Changes in db connection

--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -14,7 +14,6 @@
     <script defer src="./js/adlogin.js"></script>
 </head>
 <body style="background: url(./IMG/bgimage.jpeg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
-        <a href="/login" class="logo">User</a>
         <form id="adlogin" method="post" action="/adminlogin">
             <h1>Administrator</h1>
             <h1>Login</h1>
@@ -34,7 +33,8 @@
             <button type="submit" >Log In</button>
             </div>
             <div class="last">
-                <br><br>
+                <p class="pir">User Login? <a href="/login">Click Here</a></p>
+                <br>
             </div>
         </form>
     </div>
