--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,6 @@
     <script defer src="./js/script1.js"></script>
 </head>
 <body style="background: url(./IMG/bgimage.jpeg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
-        <a href="/adminlogin" class="logo">ADMIN</a>
         <form id="form1" method="post" action="/login">
             <h1>Welcome</h1>
             <h1>To E Canteen</h1>
@@ -33,7 +32,8 @@
             <button type="submit" >Log In</button>
             </div>
             <div class="last">
-            <p class="pir">Create Account <a href="/signup">Sign Up</a></p>
+                <p class="pir">Create Account <a href="/signup">Sign Up</a></p>
+                <p class="pir">Admin Login <a href="/adminlogin">Click Here</a></p>
             </div>
         </form>
     </div>
